# Astral

./: CMakeLists.txt  README.md  README.md2.md  about.md  about.md2.md  changelog.md  echo.port.geode  mod.json  support.md  todo.json
.github/workflows/: multi-platform-relwithdebinfo-with-pdb.yml  multi-platform.yml
resources/: imguinamestuff.cpp
src/: includes.h  includes.hpp  main.cpp  paths.cpp  paths.h  read_me_please!!  vars.h
src/Bot/: bot.cpp  bot.hpp
src/Bot/format/: json.hpp
src/Bot/replay/format/: cr.hpp
src/Bot/replay/formats/: default.hpp  json.hpp
src/GUI/: gui.cpp  gui.hpp
src/GUI/Fonts/: interMedium.h
src/GUI/components/: Button.cpp  Checkbox.cpp  Child.cpp  Input.cpp  Line.cpp  Tab.cpp  Text.cpp  components.hpp
src/GUI/mobile/: mobileUI.cpp  mobileUI.hpp
src/GUI/themes/: theme.cpp  theme.hpp
src/GUI/themes/astral/: core.cpp
src/GUI/themes/core/: core.cpp
src/GUI/themes/echo/: core.cpp  core.hpp  echo.cpp  echo.hpp
src/Logic/: hacks.cpp
src/Logic/Bot/: bot.cpp  bot.hpp
src/Logic/Bot/replay/format/: format.ast.txt
src/Logic/Hacks/: AccuratePercentage.cpp  AutoLDM.cpp  AutoSafeMode.cpp  Autoclicker.cpp  FrameCounter.cpp  FrameStepper.cpp  InstantMirror.cpp  KeepWave.cpp  LayoutModeEclipse.cpp  LockSeed.cpp  LockToTPS.cpp  NoDashFire.cpp  NoDeathEffect.cpp  NoGhostTrail.cpp  NoGhostTrail.hpp  NoMirror.cpp  NoOrbEffects.cpp  NoParticles.cpp  NoRespawnFlash.cpp  NoShaders.cpp  Noclip.cpp  PracticeFix.cpp  PracticeFix.hpp  RandomSeed.cpp  RespawnDelay.cpp  SafeMode.cpp  SeedHack.cpp  ShowHitboxesEclipse.cpp  ShowTrajectoryEclipse.cpp  ShowTriggersEclipse.cpp  SolidWaveTrail.cpp  Speedhack.cpp  StartPosSwitcher.cpp  TPSBypass.cpp  TPSBypassEclipse.cpp  UnlockMainLevels.cpp  fpsbypass.cpp
src/Logic/Hacks/Eclipse Examples/: AccuratePercentage.cpp  AudioSpeedEclipse.cpp  AutoLDM.cpp  CheckpointLimitEclipse.cpp  CopyHackEclipse.cpp  DiscordRPCEclipse.cpp  FrameStepperEclipse.cpp  FreezeAttempts.cpp  LevelKickEclipse.cpp  LockCursorEclipse.cpp  MusicUnlockerEclipse.cpp  MuteLevelSFX.cpp  MuteRewardsSFX.cpp  NoTrail.cpp  PracticeFix.cpp  RandomSeed.cpp  ShowTriggers.cpp  UnlockIconsEclipse.cpp  UnlockMainLevelsEclipse.cpp  ZeroPercentPractice.cpp
src/Logic/Hacks/Labels/: Label.cpp  Label.hpp  LabelContainer.cpp  LabelContainer.hpp  Labels.cpp
src/Logic/Practice Fixes/: input.cpp  play_layer.cpp  player.cpp  practice_fixes.hpp
src/Renderer/: renderer.cpp  renderer.hpp
src/builds/: assembler.hpp
src/extraforlater/: about.md2.md
src/mobile/: mobileUI.hpp
